# r_clip

./: Cargo.toml  README.md  bacon.toml
crates/rclip/: Cargo.toml
crates/rclip/src/: client.rs  clipboard_listener.rs  main.rs  server.rs
crates/rclip/src/client/: errors.rs
src/: clipboard_listener.rs  main.rs  server.rs
src/server/: errors.rs
xtask/: Cargo.toml
xtask/src/: cli.rs  main.rs  scripts.rs
